--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,18 +1,15 @@
-$app-offWhite-bgColor: #dadbd3;
-$appBody-white-bgColor: #ededed;
-
 .app {
   display: grid;
   place-items: center;
-  background-color: $app-offWhite-bgColor;
+  background-color: #dadbd3;
   height: 100vh;
 
   &__body {
     display: flex;
-    width: 90vw;
+    background-color: #ededed;
     height: 90vh;
+    width: 90vw;
     margin-top: -3.125em;
-    background-color: $appBody-white-bgColor;
     box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.2);
   }
 }
